src/main/antlr4/EntityDSL.g4
grammar EntityDSL;
@header {
package nandi.project;
}
/*
entity [Name] {
    [pName]: [pType] [[modifier] [modifier] …]
    ...
}
*/




// Parser szabályok
model : entity* EOF;
entity : 'entity' ID '{' property* '}';
property : propertyName ':' type modifier* ';'? ;
propertyName : ID | 'email';
type    : ID                     #SimpleType
        | ID '[' ']'             #ListType
        ;
modifier    : 'primary'                     #PRIMARY
            | 'generated'                   #GENERATED
            | 'required'                    #REQUIRED
            | 'unique'                      #UNIQUE
            | 'optional'                    #OPTIONAL
            | 'min' '(' INT ')'             #MIN
            | 'max' '(' INT ')'             #MAX
            | 'length' '(' INT ',' INT ')'  #LENGTH
            | 'minLength' '(' INT ')'       #MIN_LENGTH
            | 'maxLength' '(' INT ')'       #MAX_LENGTH
            | 'email'                       #EMAIL
            | 'manyToOne'                   #MANY_TO_ONE
            | 'oneToMany' '(' ID ')'        #ONE_TO_MANY
            | 'oneToOne'                    #ONE_TO_ONE_OWNER
            | 'oneToOne' '(' ID ')'         #ONE_TO_ONE
            | 'manyToMany'                  #MANY_TO_MANY
            ;

// Lexer szabályok
ID  : [a-zA-Z_][a-zA-Z0-9_]* ;
INT : [0-9]+ ;
WS  : [ \t\r\n]+ -> skip;
